--- a/tracker-frontend/src/App.css
+++ b/tracker-frontend/src/App.css
@@ -47,6 +47,12 @@ body {
   border-radius:20px;
 }
 
+.container5 {
+  padding:1em;
+  display:grid;
+  grid-template-columns: 50% 50%;
+}
+
 h1 {
   letter-spacing: 1px;
   margin: 5px;
