add category to the model of db

--- a/tracker-frontend/src/App.css
+++ b/tracker-frontend/src/App.css
@@ -144,6 +144,7 @@ input[type='number'] {
   list-style-type: style type;
   padding: 10;
   margin-bottom: 10px;
+  overflow-y: scroll;
 }
 
 .historyHead {
